Add foundation project to provide own loggger based on Nlog

--- a/nini.core/nini.core.csproj
+++ b/nini.core/nini.core.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\nini.core.dal\nini.core.dal.csproj" />
+    <ProjectReference Include="..\nini.foundation\nini.foundation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
