--- a/nini/nini.csproj
+++ b/nini/nini.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="NLog" Version="4.6.3" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.1" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="3.0.0" />
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\nini.core\nini.core.csproj" />
+    <ProjectReference Include="..\nini.foundation\nini.foundation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
